Template-Necxt/templateVPC.yaml
AWSTemplateFormatVersion: '2010-09-09'
Resources:
  # VPC
  FdDashboardVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: '10.170.0.0/16'
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
        - Key: Name
          Value: fd-dashboard

  # Internet Gateway (IGW)
  FdDashboardIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: fd-dashboard-IGW

  # Attach Internet Gateway to VPC
  AttachIGW:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref FdDashboardVPC
      InternetGatewayId: !Ref FdDashboardIGW

  # Subnets Publicas e Privadas para cada AZ
  FdDashboardPublicSubnetAZ1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref FdDashboardVPC
      CidrBlock: '10.170.16.0/20'
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      MapPublicIpOnLaunch: 'true'
      Tags:
        - Key: Name
          Value: fd-dashboard-subnet-public1-us-east-1a

  FdDashboardPrivateSubnetAZ1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref FdDashboardVPC
      CidrBlock: '10.170.0.0/20'
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      Tags:
        - Key: Name
          Value: fd-dashboard-subnet-private1-us-east-1a

  FdDashboardPublicSubnetAZ2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref FdDashboardVPC
      CidrBlock: '10.170.32.0/20'
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      MapPublicIpOnLaunch: 'true'
      Tags:
        - Key: Name
          Value: fd-dashboard-subnet-public2-us-east-1b

  FdDashboardPrivateSubnetAZ2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref FdDashboardVPC
      CidrBlock: '10.170.160.0/20'
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      Tags:
        - Key: Name
          Value: fd-dashboard-subnet-private2-us-east-1b

  FdDashboardPublicSubnetAZ3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref FdDashboardVPC
      CidrBlock: '10.170.144.0/20'
      AvailabilityZone: !Select [ 2, !GetAZs '' ]
      MapPublicIpOnLaunch: 'true'
      Tags:
        - Key: Name
          Value: fd-dashboard-subnet-public3-us-east-1c

  FdDashboardPrivateSubnetAZ3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref FdDashboardVPC
      CidrBlock: '10.170.128.0/20'
      AvailabilityZone: !Select [ 2, !GetAZs '' ]
      Tags:
        - Key: Name
          Value: fd-dashboard-subnet-private3-us-east-1c

  # NAT Gateway Elastic IP
  FdDashboardEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  # NAT Gateway
  FdDashboardNATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt FdDashboardEIP.AllocationId
      SubnetId: !Ref FdDashboardPublicSubnetAZ1
      Tags:
        - Key: Name
          Value: fd-dashboard-NAT-Gateway

  # Route Table for Public Subnets
  FdDashboardPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref FdDashboardVPC

  # Public Route to IGW for Public Subnets
  FdDashboardPublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref FdDashboardPublicRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref FdDashboardIGW

  # Associate Public Subnets with Route Table
  FdDashboardPublicSubnetRouteTableAssociationAZ1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref FdDashboardPublicSubnetAZ1
      RouteTableId: !Ref FdDashboardPublicRouteTable

  FdDashboardPublicSubnetRouteTableAssociationAZ2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref FdDashboardPublicSubnetAZ2
      RouteTableId: !Ref FdDashboardPublicRouteTable

  FdDashboardPublicSubnetRouteTableAssociationAZ3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref FdDashboardPublicSubnetAZ3
      RouteTableId: !Ref FdDashboardPublicRouteTable

  # Route Table for Private Subnets
  FdDashboardPrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref FdDashboardVPC

  # Private Route to NAT Gateway for Private Subnets
  FdDashboardPrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref FdDashboardPrivateRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref FdDashboardNATGateway

  # Associate Private Subnets with Route Table
  FdDashboardPrivateSubnetRouteTableAssociationAZ1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref FdDashboardPrivateSubnetAZ1
      RouteTableId: !Ref FdDashboardPrivateRouteTable

  FdDashboardPrivateSubnetRouteTableAssociationAZ2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref FdDashboardPrivateSubnetAZ2
      RouteTableId: !Ref FdDashboardPrivateRouteTable

  FdDashboardPrivateSubnetRouteTableAssociationAZ3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref FdDashboardPrivateSubnetAZ3
      RouteTableId: !Ref FdDashboardPrivateRouteTable

Outputs:
  VPCId:
    Description: VPC ID
    Value: !Ref FdDashboardVPC
  PublicSubnets:
    Description: List of Public Subnet IDs
    Value: !Join [ ',', [ !Ref FdDashboardPublicSubnetAZ1, !Ref FdDashboardPublicSubnetAZ2, !Ref FdDashboardPublicSubnetAZ3 ] ]
  PrivateSubnets:
    Description: List of Private Subnet IDs
    Value: !Join [ ',', [ !Ref FdDashboardPrivateSubnetAZ1, !Ref FdDashboardPrivateSubnetAZ2, !Ref FdDashboardPrivateSubnetAZ3 ] ]
